--- a/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
+++ b/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
@@ -51,5 +51,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{051A57E4-EFBC-4401-AAD6-6147395C5257}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
