Implementiram Entity Framework

--- a/RES_SHES_PR-22-27-2015/SHES/App.config
+++ b/RES_SHES_PR-22-27-2015/SHES/App.config
@@ -17,4 +17,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="SHES_DBConnectionString" 
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename=|DataDirectory|\SHES_DB.mdf;Integrated Security=True;"/>
+  </connectionStrings>
 </configuration>
