Realizujem metodu 'SolarPanel'-a i izlažem sercice 'WeatherForecast'-a
SolarPanel: metoda za trenutnu snagu
WeatherForecast: GetSunlightPercentage()

--- a/RES_SHES_PR-22-27-2015/WeatherSimulator/WeatherSimulator.csproj
+++ b/RES_SHES_PR-22-27-2015/WeatherSimulator/WeatherSimulator.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WeatherForecast_Provider.cs" />
+    <Compile Include="WeatherForecast_Server.cs" />
     <Compile Include="WeatherSimulator_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
