Dodajem logiku voznje automobila i izdvajam funkcionalnosti iz menija (koje nisu vezane za konzolu)

--- a/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
+++ b/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DATA\Model\Consumer.cs" />
     <Compile Include="DATA\Model\ElectricVehicleCharger.cs" />
     <Compile Include="DATA\Model\SolarPanel.cs" />
+    <Compile Include="MenuFunctions.cs" />
     <Compile Include="SHES_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
