Izlažem 'Utility' servis
Utility: klase Utility_Program, Utility_Server i Utility_Provider

--- a/RES_SHES_PR-22-27-2015/Utility/Utility.csproj
+++ b/RES_SHES_PR-22-27-2015/Utility/Utility.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Utility_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility_Provider.cs" />
+    <Compile Include="Utility_Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
