Dodajem 4 metode za manipulisanje evc-om i dodajem klasu 'SHES_Tasks' sa 2 metode
SHES: MenuFunctions: ConnectEVC, DisconnectEVC, StartCharging, StopCharging
SHES: SHES_Tasks: BatteryBehavior i MainCalculus

--- a/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
+++ b/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
@@ -76,6 +76,7 @@
     <Compile Include="MenuFunctions.cs" />
     <Compile Include="SHES_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SHES_Tasks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
