--- a/RES_SHES_PR-22-27-2015/Common/Common.csproj
+++ b/RES_SHES_PR-22-27-2015/Common/Common.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Contracts.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniversalClock.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
