Menjam logiku za WeatherSimulator
Izbor načina rada: Auto/Manual

--- a/RES_SHES_PR-22-27-2015/WeatherSimulator/WeatherSimulator.csproj
+++ b/RES_SHES_PR-22-27-2015/WeatherSimulator/WeatherSimulator.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WeatherForecastManual_Provide.cs" />
     <Compile Include="WeatherForecast_Provider.cs" />
+    <Compile Include="WeatherForecastManual_Server.cs" />
     <Compile Include="WeatherForecast_Server.cs" />
     <Compile Include="WeatherSimulator_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
