--- a/RES_SHES_PR-22-27-2015/Common/Common.csproj
+++ b/RES_SHES_PR-22-27-2015/Common/Common.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +45,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Contracts.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="IMeasurement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniversalClock.cs" />
   </ItemGroup>
