--- a/RES_SHES_PR-22-27-2015/Utility/Utility.csproj
+++ b/RES_SHES_PR-22-27-2015/Utility/Utility.csproj
@@ -64,8 +64,8 @@
   <ItemGroup>
     <Compile Include="Utility_Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility_Provider.cs" />
-    <Compile Include="Utility_Server.cs" />
+    <Compile Include="PowerPrice_Provider.cs" />
+    <Compile Include="PowerPrice_Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
