Ispravljene funkcionalnosti iscrtavanja grafika i ispisa vremena

--- a/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
+++ b/RES_SHES_PR-22-27-2015/SHES/SHES.csproj
@@ -106,6 +106,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="DB\SHES_DB.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
