--- a/RES_SHES_PR-22-27-2015/WeatherSimulatorTest/WeatherSimulatorTest.csproj
+++ b/RES_SHES_PR-22-27-2015/WeatherSimulatorTest/WeatherSimulatorTest.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,12 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeatherForecastManual_ProviderTest.cs" />
+    <Compile Include="WeatherForecastManual_ServerTest.cs" />
     <Compile Include="WeatherForecast_ProviderTest.cs" />
+    <Compile Include="WeatherForecast_ServerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{051A57E4-EFBC-4401-AAD6-6147395C5257}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WeatherSimulator\WeatherSimulator.csproj">
+      <Project>{D1E190B0-DF0B-4723-8F62-4B567AB87F49}</Project>
+      <Name>WeatherSimulator</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
