--- a/RES_SHES_PR-22-27-2015/UniversalTimerTest/UniversalTimerTest.csproj
+++ b/RES_SHES_PR-22-27-2015/UniversalTimerTest/UniversalTimerTest.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniversalClockTest.cs" />
     <Compile Include="UniversalClock_ProviderTest.cs" />
     <Compile Include="UniversalClock_ServerTest.cs" />
   </ItemGroup>
