--- a/RES_SHES_PR-22-27-2015/SHESTest/SHESTest.csproj
+++ b/RES_SHES_PR-22-27-2015/SHESTest/SHESTest.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -65,8 +66,11 @@
     <Compile Include="Data\Model\BatteryTest.cs" />
     <Compile Include="Data\Model\ConsumerTest.cs" />
     <Compile Include="Data\Model\ElectricVehicleChargerTest.cs" />
+    <Compile Include="Data\Model\MeasurementTest.cs" />
     <Compile Include="Data\Model\SolarPanelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SHES_ProviderTest.cs" />
+    <Compile Include="SHES_ServerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
